# sandbox

./: .gitignore  CLAUDE.md  LICENSE  README.md  Sandbox.lean  lake-manifest.json  lakefile.toml  pyproject.toml
.agent/: project.json
Sandbox/: Basic.lean
examples/: check_github_issue.py
injection_detector/: __init__.py  __main__.py  detector.py  patterns.py
numina/.metadata/blueprints/calculas/: blueprint.json
numina/blueprints/calculas/: calculas.tex
numina/blueprints/calculas/source/: calculas-source-ocr.tex
proof/: _macros.tex  problem.tex  section_1_irrationality.tex  section_1_sol_v1.tex  section_1_sol_v2.tex  verify_final.txt  verify_final_run1.txt  verify_final_run2.txt  verify_final_run3.txt  verify_final_v2.txt  verify_final_v2_run3.txt  verify_section_1.txt
reports/: 1_implementation.html  roadmap.html
skills/: experience.md  latex_tools.md  reasoning_strategies.md  reasoning_tools.md
skills/scripts/: api_google.py  api_oai.py  brainstorm.py  generator.py  improver.py  logic_verifier.py  matlas_search.py  prompts.py  proof_verifier.py  reasoning_assistant.py
tests/: conftest.py  test_cli.py  test_detector.py  test_patterns.py
