[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "injection-detector"
version = "0.1.0"
description = "Lightweight Python library for detecting prompt injection attempts in text."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zibo-yang" }]
requires-python = ">=3.9"
dependencies = []

keywords = ["prompt injection", "security", "llm", "ai safety", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
]

[project.scripts]
injection-detect = "injection_detector.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["injection_detector*"]
